--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,8 +30,23 @@ h1{
 h2{
 	font-size: 25px;
 	padding-bottom: 20px;
+	text-shadow: 2px 2px 2px #25291d;
 }
 
 .wrapper div{
-	color: blue;
+	margin: 50px 5%;
+	text-shadow: 2px 2px 2px #25291d;
+
 }
+
+h3{
+	font-size: 25px;
+	text-decoration: underline;
+	margin-bottom: 20px;
+}
+
+ul{
+	font-size: 20px;
+	line-height: 24px;
+}
+
