--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,11 +19,11 @@ header{
 	border: 5px solid #750000;
 	border-radius: 10px;
 	text-align: center;
+	text-shadow: 4px 4px 4px #25291d;
 }
 
 h1{
 	font-size: 50px;
-	text-shadow: 4px 4px 4px #25291d;
 	padding: 20px 0;
 }
 
@@ -33,5 +33,24 @@ h2{
 }
 
 .wrapper div{
-	color: blue;
+	padding: 20px;
+	text-shadow: 2px 2px 2px #25291d;
+
 }
+
+h3{
+	text-decoration: underline;
+	padding-bottom: 5px;
+	font-size: 30px;
+}
+
+li{
+	line-height: 25px;
+	font-size: 18px;
+}
+
+
+
+
+
+
